# nexa-server-v2

./: .gitignore  Cargo.toml  log4rs.yaml  package-lock.json  package.json  tsconfig.json
client/: package-lock.json  package.json
client/public/: index.html
client/src/: App.test.tsx  index.js  main.tsx
client/src/components/Dashboard/: index.tsx
client/src/components/SwaggerUI/: index.tsx
logs/: .e915df30d1b37946e2baf0281f8ce3a5263e4afa-audit.json  .f8314434ee6d382bc1b094c87a87223ff5b2362f-audit.json
public/views/: sysinfo.ejs
src/: index.ts  main.rs
src/components/Dashboard/: index.tsx
