[package]
name = "nexa_gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
env_logger = "0.9"
prometheus = { version = "0.14", features = ["registry", "text"] }
sysinfo = "0.23"
clap = "4.1"
serde = { version = "1.0", features = ["derive"] }
