[package]
name = "nexa_gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
tokio = { version = "1.44.0", features = ["full"] }
env_logger = "0.11.6"
prometheus = "0.13.4"
sysinfo = "0.33.1"
clap = { version = "4.5.31", features = ["derive"] }
serde = { version = "1.0.218", features = ["derive"] }
